# mcp-any-rest

./: .gitignore  404.html  Cargo.toml  LICENSE  README.en.md  README.md  build_and_copy.bat  build_and_copy.sh  index.html  run_server.bat  run_server.sh  run_test.sh  sitemap.xml
.cargo/: config.toml
.trae/dev-skills/: CONVERT.md  EXEC-TEST.md  (+2 more)
about/: index.html
article/: index.html
assets/: 404.html-IvbGLUlU.js  app-CW1RJzCT.js  auth-examples.html-CSmVOCBq.js  auth-examples.html-Ds4dAMJL.js  configuration.html-D3PbFIQx.js  configuration.html-ZiNyJezg.js  ide-support.html-C0YgL6HP.js  ide-support.html-D3XyFhyC.js  index.html-8-n-_nsD.js  index.html-B33EFPf8.js  index.html-BADdlyF3.js  index.html-BEC47XJh.js  index.html-BEkVTjI-.js  index.html-BkXDWRjY.js  index.html-BloUrslV.js  index.html-BoTRPf9-.js  index.html-BxA6du5Z.js  index.html-C5e8q8tu.js  index.html-CA4h0U7T.js  index.html-CERFIvMq.js  index.html-CSE3dyWu.js  index.html-CWr5w90h.js  index.html-D0F3fT9L.js  index.html-D2AEYVPR.js  index.html-D7fJ3oqi.js  index.html-DZMT5ALu.js  index.html-DaAsljaD.js  index.html-DhdrYWiw.js  index.html-Dv9bHnF5.js  index.html-PXHSoBV5.js  index.html-Sf3kA_ul.js  index.html-ZCPErMS7.js  index.html-c82VAhgw.js  index.html-faHcnxzv.js  index.html-sQTZZiMR.js  index.html-sYUwK0oV.js  quickstart.html-BA1YJq7o.js  quickstart.html-DBPd70Oh.js  specification.html-gvAXcZ-E.js  specification.html-up5NAWoF.js  (+3 more)
blog/: index.html
category/: index.html
config/: config.json  mcp-stdio-example.json
docs/: 404.html  README.en.md  README.md  WEB_CONFIGURATION.en.md  WEB_CONFIGURATION.md  ZML_AUTHORIZATION.md  ZML_QUICKSTART.md  ZML_SPECIFICATION.en.md  ZML_SPECIFICATION.md  index.html  robots.txt  sitemap.xml
en/: index.html
guide/: auth-examples.html  configuration.html  ide-support.html  index.html  quickstart.html  specification.html
markdown-docs/: ZML_AUTHORIZATION.en.md  ZML_QUICKSTART.en.md
package/: mcp-stdio.json
reviews/: index.html
src/: lib.rs  main.rs
star/: index.html
tag/: index.html
tests/: zml_enum_tests.rs  zml_integration_test.rs
timeline/: index.html
(+164 files in other folders)
